# nl2sql-agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  roadmap.md
artifacts/: agent-flow.mermaid
configs/: database.yml  prompts.yml  schema.yml
docs/: n8n.md  prerequisites.md
knowledge/: data_dictionary.yml  sql_examples.yml
nl2sql/: __init__.py  config.py  utils.py
nl2sql/agents/: __init__.py  graph.py  nodes.py  state.py  utils.py
nl2sql/agents/tools/: __init__.py  chat_tools.py
nl2sql/api/: README.md  __init__.py  main.py  models.py
nl2sql/api/routes/: __init__.py  chat.py  health.py
nl2sql/database/: __init__.py  base.py  postgresql.py
nl2sql/knowledge_base/: data_dictionary.py  sql_examples.py  vector_store.py
notebooks/: 0.0-database_connection.ipynb  0.1-database_connection.ipynb  1.0-data_dictionary.ipynb  1.1-data_dictionary.ipynb  2.0-sql_examples.ipynb  2.1-sql_examples.ipynb  3.0-vector-store.ipynb  3.1-vector-store.ipynb  4.0-nl2sql-agent.ipynb  4.1-nl2sql-agent.ipynb  4.2-nl2sql-agent.ipynb  4.3-nl2sql-agent.ipynb
notebooks/library_demos/: 0-langchain.ipynb  1-langgraph.ipynb
notebooks/sql_agent_demos/: langchain_sql_agent.ipynb  llamaindex_sql_agent.ipynb  vanna_sql_agent.ipynb
scripts/: setup_data_dictionary.py  setup_knowledge_base.py  setup_vector_store.py  terminal_chat.py  test_api.py
